script_exporter/kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prom-custom-script-nodeport
  namespace: demo
  labels:
    cluster: prom-custom-script
spec:
  ports:
    - name: web
      port: 9152
  selector:
    cluster: prom-custom-script
